@@ -1,3 +1,4 @@
 StreamReaderThread.Read_error=Read error: {0}
 ValgrindCommand.Couldnt_create=Couldn't create {0}
 ValgrindCommand.Couldnt_delete=Couldn't delete {0}
+AbstractValgrindTextParser.Parsing_output_failed=Parsing output failed on line: {0}
